<resources>
    <string name="app_name">Trivia</string>

    <string name="finish">Finish</string>
    <string name="history">History</string>

    <!-- Questions -->
    <string name="question_1">What is your name?</string>
    <string name="question_2">Who is the best cricketer in the world?</string>
    <string name="question_3">What are the colors in the Indian national flag?</string>

    <!-- Answers -->
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>

    <!-- Result Section-->
    <string name="your_answers">Here are the answers selected:</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="virat_kolli">Virat Koli</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>


</resources>