<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".ui.fragments.Fragment01">

    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_above="@id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/question_2"
                android:textSize="36sp"
                android:textColor="@color/white"/>

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/sachinRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sachin_tendulkar"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="22sp"/>
                <RadioButton
                    android:layout_marginTop="10dp"
                    android:id="@+id/viratRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virat_kolli"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="22sp"/>
                <RadioButton
                    android:id="@+id/adamRadioBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adam_gilchirst"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="22sp"/>
                <RadioButton
                    android:id="@+id/jacquesRadioBtn"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jacques_kallis"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:textSize="22sp"/>
            </RadioGroup>


        </LinearLayout>



    </ScrollView>



    <Button
        android:id="@+id/nextButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:backgroundTint="@color/white"/>




</RelativeLayout>