<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200">

    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:scrollbars="none"
        android:layout_above="@id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Summary"
                android:textSize="32sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/user_greet_tv"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/your_answers"
                android:textSize="24sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/question2"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/question_2"
                android:textSize="24sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:id="@+id/question3"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/question_3"
                android:textSize="24sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"/>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/finishBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FINISH"
        android:textColor="@color/blue_200"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/historyBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HISTORY"
        android:textColor="@color/blue_200"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:backgroundTint="@color/white"/>


</RelativeLayout>